# nits

./: Makefile  README.md  README.org  nits.py  pyproject.toml  setup.py
nits/: __init__.py
